# platform-tools-tradefederation

./: .classpath  .project  Android.bp  Android.mk  CleanSpec.mk  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING  atest_tradefed.sh  error_prone_rules.mk  pylintrc  script_help.sh  tradefed.sh  tradefed_win.bat
atest/: .pylintrc  Android.bp  Android.mk  INTEGRATION_TESTS  OWNERS  README.md  TEST_MAPPING  asuite_metrics.py  atest.py  atest_arg_parser.py  atest_completion.sh  atest_error.py  atest_execution_info.py  atest_execution_info_unittest.py  atest_integration_tests.py  atest_metrics.py  atest_unittest.py  atest_utils.py  atest_utils_unittest.py  bug_detector.py  bug_detector_unittest.py  cli_translator.py  cli_translator_unittest.py  constants_default.py  module_info.py  module_info_unittest.py  result_reporter.py  result_reporter_unittest.py  run_atest_unittests.sh  test_finder_handler.py  test_finder_handler_unittest.py  test_mapping.py  test_runner_handler.py  test_runner_handler_unittest.py  unittest_constants.py  unittest_utils.py
atest/docs/: developer_workflow.md
atest/metrics/: clearcut_client.py  metrics.py  metrics_base.py  metrics_utils.py
atest/proto/: clientanalytics.proto  common.proto  external_user_log.proto  external_user_log_pb2.py  internal_user_log.proto  internal_user_log_pb2.py
atest/test_data/: sample_test_cmd_result.json  test_commands.json
atest/test_finders/: cache_finder.py  cache_finder_unittest.py  module_finder.py  module_finder_unittest.py  suite_plan_finder.py  test_finder_utils.py  test_finder_utils_unittest.py  test_info.py  test_suite_finder.py  test_suite_finder_unittest.py  tf_integration_finder.py  tf_integration_finder_unittest.py
atest/test_runners/: atest_tf_test_runner.py  atest_tf_test_runner_unittest.py  event_handler.py  event_handler_unittest.py  example_test_runner.py  regression_test_runner.py  robolectric_test_runner.py  robolectric_test_runner_unittest.py  suite_plan_test_runner.py  suite_plan_test_runner_unittest.py  test_runner_base.py  test_suite_test_runner.py  test_suite_test_runner_unittest.py  vts_tf_test_runner.py  vts_tf_test_runner_unittest.py
atest/tools/: atest_tools.py  atest_tools_unittest.py  atest_updatedb.py  atest_updatedb_unittest.py
atest/unittest_data/: AndroidTest.xml  VtsAndroidTest.xml  module-info.json
clearcut_client/: Android.bp
common_util/: Android.bp
device_build_interfaces/: Android.bp
invocation_interfaces/: Android.bp
isolation/: Android.bp  isolation_runner.proto
javatests/: .classpath
lite/: Android.bp
prod-tests/: .classpath  .project  Android.mk
prod-tests/tests/: Android.mk
proto/: build_info.proto  collector.proto  file_metadata.proto  log_file.proto  metric_measurement.proto  summary_record.proto  test_record.proto
proto-gen/: README.md
proto/feature/: tradefed_service.proto
python-lib/: Android.bp
python-lib/helloWorld/: test_hello_world.py
python-lib/tradefed_py/: android_device.py  base_test.py  tf_main.py  tf_runner.py
reference_tests/: Android.bp  build_prebuilts.sh
reference_tests/src/: BUILD.bazel  WORKSPACE  hamcrest  junit
reference_tests/src/java/com/android/testtype/isolation/: OnePassingOneFailingTest.java  SimpleFailingTest.java  SimplePassingTest.java
reference_tests/src/java/com/android/tradefed/referencetests/: OnePassingOneFailingTest.java  SimpleFailingTest.java  SimplePassingTest.java
remote/: .classpath  .project  Android.bp  Android.mk
res/apks/contentprovider/: TradefedContentProvider.apk
res/apks/telephonyutil/: PREBUILT  TelephonyUtility.apk
res/apks/wifiutil/: PREBUILT  WifiUtil.apk
res/config/: atest.xml  instrumentations.xml
res/config/emulator/: local_headless.xml
res/config/suite/: host_unit_tests.xml  test_mapping_host_suite.xml  test_mapping_suite.xml
res/config/unit-tests/: unit-tests-known-failures.xml
res/suite/: allowed-preparers.txt
test_framework/: Android.bp  README.md
test_result_interfaces/: Android.bp
tests/: .classpath  Android.bp  Android.mk  run_tradefed_tests.sh
tests/res/testconfigs/: global-config-invalid-option.xml  global-config.xml  mandatory-config.xml  multi-device-outside-tag.xml  multi-device.xml  single-config-and-fake.xml
tests/res/testdata/: subprocess1.txt  subprocess2.txt  test_mapping_1  test_mapping_2  test_mapping_with_mainline
tests/res/testtype/: gtest_output6.xml  gtest_output8.txt
util-apps/ContentProvider/: Android.mk
util-apps/ContentProvider/androidTest/: Android.bp  Android.mk  (+2 more)
(+1454 files in other folders)
