# Copyright (C) 2021 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

filegroup(
    name = "ResourceTests",
    srcs = [
        "//:CopyOnePassingOneFailingTest",
        "//:CopySimpleFailingTest",
        "//:CopySimplePassingTest",
    ],
)

# Roughshod build of JUnit so that we can link against it.
# It shouldn't get used after that since at runtime the tests are loaded with
# Tradefed's version of JUnit, etc.
# buildifier: disable=bad-recursive-glob
java_library(
    name = "junit",
    srcs = glob([
        "junit/**/*.java",
        "hamcrest/hamcrest-core/**/*.java",
    ]),
    visibility = ["//visibility:public"],
)

# Test with a single passing test method
java_binary(
    name = "SimplePassingTest",
    srcs = [
        "java/com/android/tradefed/referencetests/SimplePassingTest.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:junit",
    ],
)

copy_file(
    name = "CopySimplePassingTest",
    src = "//:SimplePassingTest.jar",
    out = "clean-jars/SimplePassingTest.jar",
)

# Test with a single failing test method
java_binary(
    name = "SimpleFailingTest",
    srcs = [
        "java/com/android/tradefed/referencetests/SimpleFailingTest.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:junit",
    ],
)

copy_file(
    name = "CopySimpleFailingTest",
    src = "//:SimpleFailingTest.jar",
    out = "clean-jars/SimpleFailingTest.jar",
)

# Test with one passing test and one failing test method
java_binary(
    name = "OnePassingOneFailingTest",
    srcs = [
        "java/com/android/tradefed/referencetests/OnePassingOneFailingTest.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:junit",
    ],
)

copy_file(
    name = "CopyOnePassingOneFailingTest",
    src = "//:OnePassingOneFailingTest.jar",
    out = "clean-jars/OnePassingOneFailingTest.jar",
)
